--- a/config/west.yml
+++ b/config/west.yml
@@ -14,5 +14,8 @@ manifest:
       remote: zmkfirmware
       revision: v0.3.0
       import: app/west.yml
+    - name: zmk-helpers
+      remote: urob
+      revision: v0.3.0 # Should match ZMK release.
   self:
     path: config
